prevent horizontal scroll

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -89,6 +89,7 @@ h1.sectionTitle {
   text-align: center;
   z-index: 1000;
   max-width: 100vw;
+  overflow-x: hidden;
 
   video {
     margin: 10px;
